--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Origrami Designs</title>
 
         <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="imgStyle.css"/>
 
         <script type="text/javascript">
         //this was a javascript code I required while finding the transform-origin for rotating images but later I didn't required
@@ -32,28 +33,33 @@
          <div class="images">
              <div class="img1">
          <a href=http://origami.me/camel target="_blank"  onmouseover="getXY(this)"><img src=images/camel.png width="200"/></a>
+         <p>Camel</p>
         </div>
 
          <div class="img2">
          <a href=http://origami.me/chameleon target="_blank" onmouseover="getXY(this)"><img src=images/chameleon.png width="200"/></a>
+         <p>Chameleon</p>
         </div>
 
          <div class="img3">
          <a href=http://origami.me/flying-cicada target="_blank" onmouseover="getXY(this)"><img src=images/cicada.png width="200"/></a>
+         <p>Flying-Cicada</p>
         </div>
 
          <div class="img4">
          <a href=http://origami.me/panda target="_blank" onmouseover="getXY(this)"><img src=images/panda.png width="200"/></a>
+         <p>Panda</p>
         </div>
 
          <div class="img5">
          <a href=http://origami.me/pigeon target="_blank" onmouseover="getXY(this)"><img src=images/pigeon.png width="200"/></a>
+         <p>Pigeon</p>
         </div>
 
          <div class="img6">
          <a href=http://origami.me/teddy-bear target="_blank" onmouseover="getXY(this)"><img src=images/teddy.png width="200"/></a>
+         <p>Teddy-Bear</p>
         </div>
-
          </div>
 
          <ul>
@@ -158,6 +164,13 @@
          <br>
          <br>
          <br>
+
+         <br>
+         <br>
+
+         <div class="more">
+           <a href=https://www.pinterest.co.uk/madmaz66/origrami target="_blank">Here are some more ideas! To boost your creativity</a>   
+         </div>
         
      </p>
     </body>
